--- a/desktop.ini
+++ b/desktop.ini
@@ -1,2 +1,3 @@
 [LocalizedFileNames]
 Screenshot 2025-04-30 192651.png=@Screenshot 2025-04-30 192651,0
+Screenshot 2025-04-30 194820.png=@Screenshot 2025-04-30 194820,0
